fix collapse button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,7 +53,7 @@
 		width: 32%;
 	}
 }
-@media (min-width:768px){
+@media (min-width:767px){
 	#bs-example-navbar-collapse-1{
 		margin-left: 60px;
 	}
@@ -63,3 +63,4 @@
 	    line-height: 31px;
 	}
 }
+
